==> Bridgetek/EW2025/PhotoBooth/src/components/EVE/EVE_HalImpl_ESP32.c <==
#include "EVE_HalImpl.h"
#include "EVE_Platform.h"
#define GLOBAL_BUFFER_SIZE 8 * 2014

bool EVE_HalImpl_open(EVE_HalContext *phost, const EVE_HalParameters *parameters)
{
	eve_printf_debug("Open SPI for EVE\n");
	eve_printf_debug("CS: GPIO%i, SCK: GPIO%i, MOSI: GPIO%i, MISO: GPIO%i, PWD: GPIO%i\n",
					 (int)EVE_DEFAULT_SPI_CS, (int)EVE_DEFAULT_SPI_SCK, (int)EVE_DEFAULT_SPI_MOSI, (int)EVE_DEFAULT_SPI_MISO, (int)EVE_DEFAULT_SPI_PD);

	gpio_set_level(EVE_DEFAULT_SPI_PD, 0);
	gpio_config_t pd_cfg = {
		.pin_bit_mask = BIT64(EVE_DEFAULT_SPI_PD),
		.mode = GPIO_MODE_OUTPUT,
	};
	gpio_config(&pd_cfg);
	gpio_set_level(EVE_DEFAULT_SPI_PD, 0);

	/* Initialize single channel */
	setSPI(phost, EVE_SPI_SINGLE_CHANNEL);
	gpio_set_level(EVE_DEFAULT_SPI_PD, 1);

	/* Initialize the context variables */
	phost->Status = EVE_STATUS_OPENED;
	++g_HalPlatform.OpenedDevices;
	spi_inited = true;

	return true;
}

void EVE_Hal_startTransfer(EVE_HalContext *phost, EVE_TRANSFER_T rw, uint32_t addr)
{
	eve_assert(phost->Status == EVE_STATUS_OPENED);

	esp_err_t ret;
	spi_transaction_t t;
	memset(&t, 0, sizeof(t));
	t.length = 8 * 4; // in bits
	t.flags = SPI_TRANS_USE_TXDATA;
	t.user = (void *)1;

	openBus(phost);

	// send the address
	if (rw == EVE_TRANSFER_READ)
	{
		t.tx_data[0] = (addr >> 24);
		t.tx_data[1] = (addr >> 16) & 0xFF;
		t.tx_data[2] = (addr >> 8) & 0xFF;
		t.tx_data[3] = addr & 0xFF;
		// When using SPI_TRANS_CS_KEEP_ACTIVE, bus must be locked/acquired
		spi_device_acquire_bus(spi, portMAX_DELAY);

		ret = spi_device_polling_transmit(spi, &t);
		assert(ret == ESP_OK);
		phost->Status = EVE_STATUS_READING;
	}
	else
	{
		t.tx_data[0] = (0x80 | (addr >> 24));
		t.tx_data[1] = (addr >> 16) & 0xFF;
		t.tx_data[2] = (addr >> 8) & 0xFF;
		t.tx_data[3] = addr & 0xFF;

		// When using SPI_TRANS_CS_KEEP_ACTIVE, bus must be locked/acquired
		spi_device_acquire_bus(spi, portMAX_DELAY);

		ret = spi_device_polling_transmit(spi, &t);
		assert(ret == ESP_OK);
		phost->Status = EVE_STATUS_WRITING;
	}
}

static inline void rdBuffer(EVE_HalContext *phost, uint8_t *buffer, uint32_t size)
{
	uint32_t sizeRemaining = size;
	uint8_t countTimout = 0;
	esp_err_t ret;
	spi_transaction_t t;

	memset(&t, 0, sizeof(t));
	t.user = (void *)1;
	t.flags = SPI_TRANS_USE_RXDATA;

	do
	{
		t.length = 8;
		ret = spi_device_polling_transmit(spi, &t);
		assert(ret == ESP_OK);
		countTimout++;
	} while ((t.rx_data[0] != 0x01) && (countTimout < READ_TIMOUT));

	while (sizeRemaining)
	{
		t.length = 8;
		ret = spi_device_polling_transmit(spi, &t);
		assert(ret == ESP_OK);
		sizeRemaining--;
		*buffer = t.rx_data[0];
		buffer++;

		if (ret != ESP_OK)
		{
			eve_printf_debug("%d SPI_Read failed, sizeTransferred is %d with result %d\n", __LINE__, t.length, (int)ret);
			phost->Status = EVE_STATUS_ERROR;
			return;
		}
	}
}

void wrBuffer(EVE_HalContext *phost, const uint8_t *buffer, uint32_t size)
{
	// Check if the current buffer can fit the new data
	if (globalBufferSize + size > GLOBAL_BUFFER_SIZE)
	{
		// If not, send the current global buffer
		sendBuffer(phost, globalBuffer, globalBufferSize);

		// Reset the global buffer
		globalBufferSize = 0;
	}

	// If the new buffer size is too large for the global buffer, send the new buffer directly
	if (size > GLOBAL_BUFFER_SIZE)
	{
		sendBuffer(phost, buffer, size);
	}
	else
	{
		// Otherwise, append the new data to the global buffer
		memcpy(globalBuffer + globalBufferSize, buffer, size);
		globalBufferSize += size;
	}
}

bool EVE_Hal_powerCycle(EVE_HalContext *phost, bool up)
{
	if (up)
	{
		/* Power down */
		gpio_set_level(EVE_DEFAULT_SPI_PD, 0);
		EVE_sleep(20);

		setSPI(phost, EVE_SPI_SINGLE_CHANNEL);
		EVE_sleep(20);

		/* Power up */
		gpio_set_level(EVE_DEFAULT_SPI_PD, 1);
		EVE_sleep(20);
	}
	else
	{
		/* Power down */
		gpio_set_level(EVE_DEFAULT_SPI_PD, 0);
		EVE_sleep(20);

		setSPI(phost, EVE_SPI_SINGLE_CHANNEL);
	}
	return true;
}
