==> Bridgetek/IDP-4000-04A/tool/eve_flash_pico/source/EveApps/common/eve_hal/EVE_HalImpl_STM32.c <==
#include "EVE_Platform_STM32.h"
#include "EVE_HalImpl.h"
#include "EVE_Platform.h"
#define EVE_CS_PORT GPIOA
#define EVE_CS_PIN  GPIO_PIN_4
#define EVE_PD_PORT GPIOA
#define EVE_PD_PIN  GPIO_PIN_1
#define hspi hspi1
#define FT81X_CS_ACTIVE()        { HAL_GPIO_WritePin(EVE_CS_PORT, EVE_CS_PIN, GPIO_PIN_RESET);}
#define FT81X_CS_DEACTIVE()      { HAL_GPIO_WritePin(EVE_CS_PORT, EVE_CS_PIN, GPIO_PIN_SET);}
#define PUTCHAR_PROTOTYPE int __io_putchar(int ch)
#define PUTCHAR_PROTOTYPE int fputc(int ch, FILE *f)

bool EVE_HalImpl_open(EVE_HalContext *phost, const EVE_HalParameters *parameters) {
	/* Initialize single channel */
	setSPI(phost, EVE_SPI_SINGLE_CHANNEL, 1);

	/* Initialize the context variables */
	phost->Status = EVE_STATUS_OPENED;

	phost->SpiChannels = 0;
	phost->SpiDummyBytes = 1;

	SpiHandle = &hspi;
	++g_HalPlatform.OpenedDevices;

	return true;
}

void EVE_Hal_startTransfer(EVE_HalContext *phost, EVE_TRANSFER_T rw,
		uint32_t addr) {
	eve_assert(phost->Status == EVE_STATUS_OPENED);

	FT81X_CS_ACTIVE()
	;
	HAL_StatusTypeDef ret = HAL_TIMEOUT;

	if (rw == EVE_TRANSFER_READ) {
		uint8_t spiRdHdr[4];

		/*STM32L4XX is Little Endian, LSB is in lowest address for addr*/
		spiRdHdr[0] = (addr >> 16) & 0x3F; //MSB is sent first
		spiRdHdr[1] = (addr >> 8) & 0xFF;
		spiRdHdr[2] = addr & 0xFF;
		spiRdHdr[3] = 0; //dummy byte
		ret = HAL_SPI_Transmit(SpiHandle, spiRdHdr, sizeof(spiRdHdr),
		HAL_MAX_DELAY);

		/*The first 3 bytes are dummy bytes and discard it*/
		//uint8_t rxBuff[3] = { 0 };
		//HAL_SPI_Receive(SpiHandle, rxBuff, sizeof(rxBuff),
		//HAL_MAX_DELAY);
		phost->Status = EVE_STATUS_READING;
	} else {
		uint8_t spiWrHdr[3];
		spiWrHdr[0] = 0x80 | ((addr >> 16) & 0x3F);
		spiWrHdr[1] = 0xFF & (addr >> 8);
		spiWrHdr[2] = addr & 0xFF;
		ret = HAL_SPI_Transmit(SpiHandle, spiWrHdr, sizeof(spiWrHdr),
		HAL_MAX_DELAY);
		phost->Status = EVE_STATUS_WRITING;
	}
	if (ret != HAL_OK) {
		printf("Error: HAL_SPI_Transmit failed %d\r\n", __LINE__);
	}
}

static inline bool rdBuffer(EVE_HalContext *phost, uint8_t *buffer,
		uint32_t size) {
	HAL_SPI_Receive(SpiHandle, buffer, size, HAL_MAX_DELAY);
}

static inline bool wrBuffer(EVE_HalContext *phost, const uint8_t *buffer,
		uint32_t size) {
	HAL_SPI_Transmit(SpiHandle, buffer, size, HAL_MAX_DELAY);
}

EVE_HAL_EXPORT bool EVE_Hal_powerCycle(EVE_HalContext *phost, bool up) {
	if (up) {
		HAL_GPIO_WritePin(EVE_PD_PORT, EVE_PD_PIN, GPIO_PIN_RESET);
		HAL_Delay(500);
		HAL_GPIO_WritePin(EVE_PD_PORT, EVE_PD_PIN, GPIO_PIN_SET);
		HAL_Delay(500);
	} else {
		HAL_GPIO_WritePin(EVE_PD_PORT, EVE_PD_PIN, GPIO_PIN_SET);
		HAL_Delay(500);
		HAL_GPIO_WritePin(EVE_PD_PORT, EVE_PD_PIN, GPIO_PIN_RESET);
		HAL_Delay(500);
	}
	eve_printf_debug("EVE_Hal_powerCycle Ok\r\n");
	return true;
}
